appId: com.shopify.example.ShopifyAcceleratedCheckoutsApp
---
- launchApp:
    appId: "com.shopify.example.ShopifyAcceleratedCheckoutsApp"
    clearState: true
- tapOn: "Settings"

- runFlow:
    when:
      visible:
        text: "1"
        index: 0
    commands:
      - tapOn:
          text: "1"
          index: 0

- runFlow:
    when:
      visible:
        text: "1"
        index: 0
    commands:
      - tapOn:
          text: "1"
          index: 0

# - assertVisible:
#     id: "email required toggle"
#     checked: false

- tapOn: "Email field"
- inputText: "invalid-email"
- tapOn: "Back"

- tapOn:
    id: "plus.circle"
    index: 0
- tapOn: "Create Cart"
- tapOn: "Buy with Apple\_Pay"
- tapOn: "Pay with Passcode"
# - assertVisible:
#     id: "Checkout"
- assertVisible: "Update Shipping Contact"
